[project]
name = "marzbanpy"
version = "1.5.2"
description = "An unofficial library for marzban panel"
authors = [
    { name = "Бертолло Виктор", email = "bertollo.victor@gmail.com" }
]
dependencies = [
    "httpx==0.27.0",
    "pydantic==2.8.2",
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.10"
keywords = ["marzban", "xtls", "vless", "vmess", "shadowsocks", "trojan", "xray", "xray-core"]

[project.urls]
Repository = "https://github.com/gunsh1p/marzbanpy/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["marzbanpy"]
